--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
   "version": 2,
-  "builds": [{ "src": "index.js", "use": "@vercel/node" }]
+  "builds": [
+    {
+      "src": "Backend/Node.js",
+      "use": "@vercel/node"
+    }
+  ]
 }
